@@ -158,20 +158,16 @@ sub remove { shift->replace('') }
 
 sub replace {
   my ($self, $new) = @_;
-
   my $tree = $self->tree;
-  if   ($tree->[0] eq 'root') { return $self->xml(undef)->parse($new) }
-  else                        { $new = $self->_parse("$new") }
+  return $self->xml(undef)->parse($new) if $tree->[0] eq 'root';
+  return $self->_replace($tree, $self->_parse("$new"));
+}
 
-  my $parent = $tree->[3];
-  my $i = $parent->[0] eq 'root' ? 1 : 4;
-  for my $e (@$parent[$i .. $#$parent]) {
-    last if $e == $tree;
-    $i++;
-  }
-  splice @$parent, $i, 1, @{_parent($new, $parent)};
-
-  return $self;
+sub strip {
+  my $self = shift;
+  my $tree = $self->tree;
+  return $self if $tree->[0] eq 'root';
+  return $self->_replace($tree, ['root', @$tree[4 .. $#$tree]]);
 }
 
 sub replace_content {
@@ -298,6 +294,20 @@ sub _parent {
 }
 
 sub _parse { Mojo::DOM::HTML->new(xml => shift->xml)->parse(shift)->tree }
+
+sub _replace {
+  my ($self, $tree, $new) = @_;
+
+  my $parent = $tree->[3];
+  my $i = $parent->[0] eq 'root' ? 1 : 4;
+  for my $e (@$parent[$i .. $#$parent]) {
+    last if $e == $tree;
+    $i++;
+  }
+  splice @$parent, $i, 1, @{_parent($new, $parent)};
+
+  return $self->parent;
+}
 
 sub _sibling {
   my ($self, $next) = @_;
@@ -596,22 +606,22 @@ there are no more siblings.
 
 =head2 remove
 
-  my $old = $dom->remove;
+  my $parent = $dom->remove;
 
-Remove element and return it as a L<Mojo::DOM> object.
+Remove element and return L<Mojo::DOM> object for parent of element.
 
   # "<div></div>"
-  $dom->parse('<div><h1>A</h1></div>')->at('h1')->remove->root;
+  $dom->parse('<div><h1>A</h1></div>')->at('h1')->remove;
 
 =head2 replace
 
-  my $old = $dom->replace('<div>test</div>');
+  my $parent = $dom->replace('<div>test</div>');
 
-Replace element with HTML/XML and return the replaced element as a
-L<Mojo::DOM> object.
+Replace element with HTML/XML and return L<Mojo::DOM> object for parent of
+element.
 
   # "<div><h2>B</h2></div>"
-  $dom->parse('<div><h1>A</h1></div>')->at('h1')->replace('<h2>B</h2>')->root;
+  $dom->parse('<div><h1>A</h1></div>')->at('h1')->replace('<h2>B</h2>');
 
   # "<div></div>"
   $dom->parse('<div><h1>A</h1></div>')->at('h1')->replace('')->root;
@@ -633,6 +643,16 @@ Replace element content with HTML/XML.
   my $root = $dom->root;
 
 Return L<Mojo::DOM> object for root node.
+
+=head2 strip
+
+  my $parent = $dom->strip;
+
+Remove element while preserving the content and return L<Mojo::DOM> object for
+parent of element.
+
+  # "<div>A</div>"
+  $dom->parse('<div><h1>A</h1></div>')->at('h1')->strip;
 
 =head2 text
 
